changed scrollbar and fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @tailwind base;
+
+@layer base {
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+    ::-webkit-scrollbar-track {
+        background-color: white;
+    }
+    ::-webkit-scrollbar-thumb {
+        border-radius: 30px;
+        background-color: lightgray;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: gray;
+    }
+}
+
 @tailwind components;
 @tailwind utilities;
 
